# scrapyrt

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGES.rst  Dockerfile  LICENSE  README.rst  fabfile.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/: workflows
.github/workflows/: ci.yml  main.yml  publish.yml
docs/: Makefile  api.rst  conf.py  index.rst  requirements.txt
docs/source/: api.rst  conf.py  index.rst
scrapyrt/: __init__.py  __main__.py  cmdline.py  core.py  decorators.py  exceptions.py  log.py  protocols.py  resources.py  utils.py
scrapyrt/conf/: __init__.py  default_settings.py  spider_settings.py
tests/: __init__.py  servers.py  spiders.py  test_cmdline.py  test_crawl_manager.py  test_crawler.py  test_crawler_process.py  test_crawler_runner.py  test_decorators.py  test_deprecations.py  test_log.py  test_log_observer.py  test_resource_crawl.py  test_resource_realtimeapi.py  test_resource_root.py  test_resource_serviceresource.py  test_spider_start.py  test_utils.py  utils.py
tests/sample_data/spider-start-project/: scrapy.cfg
tests/sample_data/spider-start-project/project/: settings.py
tests/sample_data/spider-start-project/project/spiders/: new.py  old.py  universal.py
tests/sample_data/testproject/: scrapy.cfg
tests/sample_data/testproject/testproject/: items.py  settings.py
tests/sample_data/testproject/testproject/spider_templates/: testspider_startrequests.py  testspider_startrequests.py.jinja
tests/sample_data/testproject/testproject/spiders/: testspider.py
tests/sample_data/testsite/: index.html  page3.html
tests/test_settings/: __init__.py  default_settings.py  settings.py
tests/testsite/: app.py  page1.html  page2.html  page3.html
